--- a/kafkart-frontend/src/index.css
+++ b/kafkart-frontend/src/index.css
@@ -1,8 +1,12 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
+  
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -21,3 +25,16 @@ body {
   min-height: 100dvh;
 }
 
+#root {
+  margin: 0;
+  display: grid;
+  place-items: center;
+  min-width: 100dvw;
+  min-height: 100dvh;
+}
+
+@layer base {
+  :root {
+    --radius: 0.5rem;
+  }
+}
